[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ruvy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
wizer = "6.0.0"
anyhow = { workspace = true }
wasi-common = "19"
wasmtime = "19"
wasmtime-wasi = "20"

[dev-dependencies]
criterion = "0.5.1"
ruby-wasm-assets = { path = "../ruby-wasm-assets" }

[build-dependencies]
anyhow = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
