[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ruvy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
wizer = "10.0.0"
anyhow = { workspace = true }
wasmtime = "36"
wasmtime-wasi = "36"

[dev-dependencies]
criterion = "0.7.0"
ruby-wasm-assets = { path = "../ruby-wasm-assets" }

[build-dependencies]
anyhow = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
