[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ruvy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = { workspace = true }
tokio = { version = "1", features = ["macros"] }
wasmtime = "39"
wasmtime-wasi = "39"
wasmtime-wizer = { version = "39", features = ["wasmtime"] }

[dev-dependencies]
criterion = "0.8.1"
ruby-wasm-assets = { path = "../ruby-wasm-assets" }

[build-dependencies]
anyhow = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
